<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8BC34A"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RiverConditions">

    <Button
        android:text="Go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/riverConfirm"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <AutoCompleteTextView
        android:text=""
        android:background="#DCEDC8"
        android:popupBackground="#DCEDC8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="130dp"
        android:id="@+id/aCTextView" />


</RelativeLayout>
