<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bluebckgrnd"
    android:id="@+id/activity_river_conditions"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.outdoorapp.RiverConditions">

    <ImageView
        android:id="@+id/imageView4"

        android:layout_width="380dp"
        android:layout_height="266dp"
        android:layout_marginBottom="168dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.98"
        android:layout_marginStart="18dp" />

    <TextView
        android:id="@+id/location"
        android:layout_width="229dp"
        android:layout_height="64dp"
        android:layout_marginEnd="96dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="96dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="78dp"
        android:text="TextView"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:background="@drawable/gmi"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:id="@+id/button"
        android:onClick="onClickOpenAddressButton"
        android:layout_marginStart="48dp"
        app:layout_constraintLeft_toRightOf="@+id/location"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        android:layout_marginBottom="8dp" />

    <ImageButton
        android:id="@+id/weatherBtn"
        android:layout_width="69dp"
        android:layout_height="41dp"
        android:background="@null"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="205dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintVertical_bias="0.421"
        app:layout_constraintRight_toLeftOf="@+id/button"
        android:layout_marginRight="8dp"
        android:layout_marginStart="205dp"
        android:layout_marginEnd="8dp" />

    <TableLayout
        android:layout_width="354dp"
        android:layout_height="155dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView4"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="329dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/siteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="casual"
                android:text="Selectable TextView, by XML"
                android:textColor="@android:color/white"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/geoLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Selectable TextView, by XML"
                android:textColor="@android:color/white"
                android:textIsSelectable="true" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/dischargeDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dischargeAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gageDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/white" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/gageheight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView"
                android:textColor="@android:color/white" />
        </TableRow>


    </TableLayout>


</android.support.constraint.ConstraintLayout>


